Updates from current DS internal fallout (#4)