@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 DataStax, Inc.
+ * Copyright 2021 DataStax, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,17 +15,27 @@
  */
 package com.datastax.fallout;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
-import org.junit.Before;
+import io.dropwizard.util.Generics;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.datastax.fallout.components.fakes.FakeConfigurationManager;
+import com.datastax.fallout.components.fakes.FakeProvisioner;
+import com.datastax.fallout.ops.Ensemble;
+import com.datastax.fallout.ops.EnsembleBuilder;
+import com.datastax.fallout.ops.NodeGroupBuilder;
 import com.datastax.fallout.ops.Provisioner;
+import com.datastax.fallout.ops.TestRunScratchSpaceFactory;
+import com.datastax.fallout.ops.TestRunScratchSpaceFactory.TestRunScratchSpace;
+import com.datastax.fallout.ops.WritablePropertyGroup;
 import com.datastax.fallout.service.FalloutConfiguration;
 import com.datastax.fallout.service.core.Fakes;
+import com.datastax.fallout.service.core.TestRunIdentifier;
 import com.datastax.fallout.service.core.User;
 import com.datastax.fallout.test.utils.WithPersistentTestOutputDir;
 import com.datastax.fallout.util.Exceptions;
@@ -37,7 +47,21 @@ public class TestHelpers
     private final static Logger logger = LoggerFactory.getLogger(TestHelpers.class);
 
     private volatile static Path testRunArtifactPath = null;
-    private volatile static FalloutConfiguration fakeFalloutConfiguration = null;
+
+    public static boolean runExpensiveTests()
+    {
+        return Boolean.getBoolean("runExpensiveTests");
+    }
+
+    public static boolean runTestsThatCostMoney()
+    {
+        return Boolean.getBoolean("runTestsThatCostMoney");
+    }
+
+    public static boolean runCCMTests()
+    {
+        return !"true".equalsIgnoreCase(System.getProperty("skipCCMTests"));
+    }
 
     public static Path setupArtifactPath(Path testCaseOutputDir)
     {
@@ -54,34 +78,60 @@ public class TestHelpers
         return artifactPath;
     }
 
-    private static void setTestRunArtifactPath(Path testCaseOutputDir)
+    public static void setTestRunArtifactPath(Path testCaseOutputDir)
     {
         TestHelpers.testRunArtifactPath = setupArtifactPath(testCaseOutputDir);
     }
 
     public static void createArtifact(Path testRunRootArtifactPath, String artifactName, String artifactContent)
     {
-        Exceptions.runUnchecked(() -> Files.write(testRunRootArtifactPath.resolve(artifactName),
-            artifactContent.getBytes(StandardCharsets.UTF_8)));
+        Exceptions.runUnchecked(() -> {
+            final var absolutePath = testRunRootArtifactPath.resolve(artifactName);
+            Files.createDirectories(absolutePath.getParent());
+            Files.writeString(absolutePath, artifactContent);
+        });
     }
 
-    protected static class FakeFalloutConfiguration extends FalloutConfiguration
+    /** Makes a {@link TestRunScratchSpace} available for tests via {@link #persistentTestClassScratchSpace()}
+     *  and {@link #persistentTestScratchSpace()}.  These scratch spaces are never cleaned up. */
+    public static class WithTestRunScratchSpace extends WithPersistentTestOutputDir
     {
-        @Override
-        public String getArtifactPath()
+        private static TestRunScratchSpaceFactory classFactory;
+        private TestRunScratchSpaceFactory testFactory;
+
+        @BeforeAll
+        public static void setClassFactory()
         {
-            return testRunArtifactPath.toString();
+            classFactory = new TestRunScratchSpaceFactory(persistentTestClassOutputDir().resolve("scratch"));
+        }
+
+        @BeforeEach
+        public void setTestFactory()
+        {
+            testFactory = new TestRunScratchSpaceFactory(persistentTestOutputDir().resolve("scratch"));
+        }
+
+        private static TestRunScratchSpace getTestRunScratchSpace(
+            TestRunScratchSpaceFactory testRunScratchSpaceFactory)
+        {
+            return testRunScratchSpaceFactory
+                .create(new TestRunIdentifier(Fakes.TEST_USER_EMAIL, Fakes.TEST_NAME, Fakes.TEST_RUN_ID));
+        }
+
+        public static TestRunScratchSpace persistentTestClassScratchSpace()
+        {
+            return getTestRunScratchSpace(classFactory);
+        }
+
+        public TestRunScratchSpace persistentTestScratchSpace()
+        {
+            return getTestRunScratchSpace(testFactory);
         }
     }
 
-    public static void setFakeFalloutConfiguration()
+    public static abstract class ArtifactTest extends WithTestRunScratchSpace
     {
-        fakeFalloutConfiguration = new FakeFalloutConfiguration();
-    }
-
-    public static abstract class ArtifactTest extends WithPersistentTestOutputDir
-    {
-        @Before
+        @BeforeEach
         public void setTestRunArtifactPath()
         {
             TestHelpers.setTestRunArtifactPath(persistentTestOutputDir());
@@ -99,7 +149,7 @@ public class TestHelpers
             absoluteArtifactPath.getParent().toFile().mkdirs();
 
             Exceptions.runUnchecked(
-                () -> Files.write(absoluteArtifactPath, artifactContent.getBytes(StandardCharsets.UTF_8)));
+                () -> Files.writeString(absoluteArtifactPath, artifactContent));
 
             return absoluteArtifactPath;
         }
@@ -108,17 +158,18 @@ public class TestHelpers
         {
             logger.info("Updating {}", absoluteArtifactPath);
             Exceptions.runUnchecked(
-                () -> Files.write(absoluteArtifactPath, artifactContent.getBytes(StandardCharsets.UTF_8), APPEND));
+                () -> Files.writeString(absoluteArtifactPath, artifactContent, APPEND));
         }
     }
 
-    public static abstract class FalloutTest extends ArtifactTest
+    public static abstract class FalloutTest<FC extends FalloutConfiguration> extends ArtifactTest
     {
-        private User testUser = Fakes.makeUser();
+        private FC falloutConfiguration = null;
+        private final User testUser = Fakes.makeUser();
 
-        public FalloutConfiguration falloutConfiguration()
+        public FC falloutConfiguration()
         {
-            return TestHelpers.fakeFalloutConfiguration;
+            return falloutConfiguration;
         }
 
         public User getTestUser()
@@ -126,11 +177,45 @@ public class TestHelpers
             return testUser;
         }
 
-        @Before
-        public void setFakeFalloutConfiguration()
+        @BeforeEach
+        public void setFalloutConfiguration()
         {
-            TestHelpers.setFakeFalloutConfiguration();
+            final var configurationClass =
+                Generics.<FC>getTypeParameter(getClass(), FalloutConfiguration.class);
+            falloutConfiguration = Exceptions.getUnchecked(() -> configurationClass.getConstructor().newInstance());
+            falloutConfiguration.setArtifactPath(testRunArtifactPath.toString());
         }
     }
 
+    public static abstract class FalloutConfigManagerTest<FC extends FalloutConfiguration> extends FalloutTest<FC>
+    {
+        public NodeGroupBuilder createFakeNodeGroupBuilder(Ensemble.Role role)
+        {
+            return NodeGroupBuilder.create()
+                .withName("fake-node-group")
+                .withPropertyGroup(new WritablePropertyGroup())
+                .withProvisioner(new FakeProvisioner())
+                .withConfigurationManager(new FakeConfigurationManager())
+                .withNodeCount(1)
+                .withRole(role)
+                .withTestRunArtifactPath(testRunArtifactPath());
+        }
+
+        public Ensemble createEnsemble(NodeGroupBuilder serverNodeGroupBuilder,
+            NodeGroupBuilder observerNodeGroupBuilder)
+        {
+            return EnsembleBuilder.create()
+                .withTestRunId(Fakes.TEST_RUN_ID)
+                .withServerGroup(serverNodeGroupBuilder)
+                .withClientGroup(serverNodeGroupBuilder)
+                .withObserverGroup(observerNodeGroupBuilder)
+                .withControllerGroup(createFakeNodeGroupBuilder(Ensemble.Role.CONTROLLER))
+                .build(testRunArtifactPath(), persistentTestScratchSpace());
+        }
+
+        public Ensemble createEnsemble(NodeGroupBuilder serverNodeGroupBuilder)
+        {
+            return createEnsemble(serverNodeGroupBuilder, createFakeNodeGroupBuilder(Ensemble.Role.OBSERVER));
+        }
+    }
 }
