@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 DataStax, Inc.
+ * Copyright 2021 DataStax, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import javax.ws.rs.core.Response;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
@@ -33,32 +32,30 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableList;
 import io.dropwizard.testing.ConfigOverride;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.glassfish.jersey.client.ClientProperties;
 import org.glassfish.jersey.client.filter.EncodingFilter;
 import org.glassfish.jersey.message.GZipEncoder;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 import com.datastax.fallout.TestHelpers;
+import com.datastax.fallout.ops.utils.FileUtils;
 import com.datastax.fallout.runner.Artifacts;
 import com.datastax.fallout.service.cli.GenerateNginxConf.NginxConfParams;
 import com.datastax.fallout.service.core.TestRun;
-import com.datastax.fallout.service.resources.FalloutServiceRule;
+import com.datastax.fallout.service.resources.FalloutAppExtension;
 import com.datastax.fallout.service.resources.RestApiBuilder;
 import com.datastax.fallout.service.views.FalloutView;
 import com.datastax.fallout.test.utils.WithPersistentTestOutputDir;
-import com.datastax.fallout.test.utils.categories.RequiresDb;
 import com.datastax.fallout.util.Exceptions;
 
+import static com.datastax.fallout.assertj.Assertions.assertThat;
 import static com.datastax.fallout.service.artifacts.ArtifactServlet.COMPRESSED_RANGE_REQUEST_ERROR_MESSAGE;
 import static com.datastax.fallout.service.cli.GenerateNginxConf.NginxConfParams.NGINX_GZIP_MIN_LENGTH;
 import static com.datastax.fallout.service.cli.GenerateNginxConf.generateNginxConf;
@@ -68,8 +65,6 @@ import static javax.ws.rs.core.Response.Status.FORBIDDEN;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static javax.ws.rs.core.Response.Status.OK;
 import static javax.ws.rs.core.Response.Status.PARTIAL_CONTENT;
-import static javax.ws.rs.core.ResponseAssert.assertThat;
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assumptions.assumeThat;
 
 public class ArtifactResourceTest
@@ -78,7 +73,7 @@ public class ArtifactResourceTest
     public static final String LARGE_ARTIFACT_CONTENT = ARTIFACT_CONTENT.repeat(100);
     public static final MediaType LOG_MEDIATYPE = MediaType.TEXT_PLAIN_TYPE.withCharset("utf-8");
 
-    @Category(RequiresDb.class)
+    @Tag("requires-db")
     public static abstract class Tests extends WithPersistentTestOutputDir
     {
         private RestApiBuilder api;
@@ -88,8 +83,8 @@ public class ArtifactResourceTest
 
         protected abstract RestApiBuilder getRestApiBuilder();
 
-        @Before
-        public void setup() throws IOException
+        @BeforeEach
+        public void setup()
         {
             api = getRestApiBuilder();
             testRun = new TestRun();
@@ -97,8 +92,8 @@ public class ArtifactResourceTest
             testRun.setTestName("testName");
             testRun.setTestRunId(UUID.fromString("69A38F36-8A91-4ABB-A2C8-B669189FEFD5"));
             testRunRootArtifactPath = Artifacts.buildTestRunArtifactPath(rootArtifactPath, testRun);
-            FileUtils.deleteDirectory(testRunRootArtifactPath.toFile());
-            Files.createDirectories(testRunRootArtifactPath);
+            FileUtils.deleteDir(testRunRootArtifactPath);
+            FileUtils.createDirs(testRunRootArtifactPath);
         }
 
         private URI showTestRunArtifactsUri()
@@ -261,10 +256,10 @@ public class ArtifactResourceTest
         }
 
         @Test
-        public void a_request_for_an_artifact_directory_redirects_to_the_root_artifact_location() throws IOException
+        public void a_request_for_an_artifact_directory_redirects_to_the_root_artifact_location()
         {
             final String artifactDir = "foo/bar/baz";
-            Files.createDirectories(testRunRootArtifactPath.resolve(artifactDir));
+            FileUtils.createDirs(testRunRootArtifactPath.resolve(artifactDir));
 
             Response response = fetchArtifact(artifactDir);
 
@@ -277,7 +272,7 @@ public class ArtifactResourceTest
         public void mime_types_are_as_expected()
         {
             final String artifactBasename = "monolith";
-            final List<Pair<String, MediaType>> expectedMimeTypes = ImmutableList.of(
+            final List<Pair<String, MediaType>> expectedMimeTypes = List.of(
                 Pair.of(".log", MediaType.TEXT_PLAIN_TYPE.withCharset("utf-8")),
                 Pair.of(".csv", MediaType.valueOf("text/csv")),
                 Pair.of(".xml", MediaType.APPLICATION_XML_TYPE),
@@ -340,27 +335,26 @@ public class ArtifactResourceTest
      * error_log setting in src/main/resources/nginx/fallout.nginx.conf.mustache for details. */
     public static class UsingNginxProxy extends Tests
     {
-        @ClassRule
-        public static final FalloutServiceRule FALLOUT_SERVICE_RULE = new FalloutServiceRule(
+        @RegisterExtension
+        public static final FalloutAppExtension FALLOUT_SERVICE = new FalloutAppExtension(
             ConfigOverride.config("useNginxToServeArtifacts", "true"));
 
-        @Rule
-        public final FalloutServiceRule.FalloutServiceResetRule FALLOUT_SERVICE_RESET_RULE =
-            FALLOUT_SERVICE_RULE.resetRule();
+        @RegisterExtension
+        public final FalloutAppExtension.FalloutServiceResetExtension FALLOUT_SERVICE_RESET =
+            FALLOUT_SERVICE.resetExtension();
 
         private static final int NGINX_LISTEN_PORT = 9080;
-        private static final Path NGINX_ROOT = Paths.get("management-scripts/nginx/html").toAbsolutePath();
-        private static final String SERVER_NAME = "fallout-host.org";
+        private static final Path NGINX_ROOT = Paths.get("etc/nginx/html").toAbsolutePath();
 
         private static Optional<Process> nginx = Optional.empty();
 
-        @BeforeClass
+        @BeforeAll
         public static void setRootArtifactPath()
         {
-            Tests.rootArtifactPath = FALLOUT_SERVICE_RULE.getArtifactPath();
+            Tests.rootArtifactPath = FALLOUT_SERVICE.getArtifactPath();
         }
 
-        @BeforeClass
+        @BeforeAll
         public static void startNginxIfAvailable() throws IOException
         {
             final Path nginxConf = persistentTestClassOutputDir()
@@ -376,8 +370,8 @@ public class ArtifactResourceTest
 
             withWriterFromOutputString(nginxConf.toString(), writer -> generateNginxConf(
                 writer,
-                new NginxConfParams(true, NGINX_LISTEN_PORT, NGINX_ROOT, SERVER_NAME),
-                FALLOUT_SERVICE_RULE.getConfiguration()));
+                new NginxConfParams(true, NGINX_LISTEN_PORT, NGINX_ROOT),
+                FALLOUT_SERVICE.getConfiguration()));
 
             nginx = Optional.of(new ProcessBuilder(
                 "nginx",
@@ -387,7 +381,7 @@ public class ArtifactResourceTest
                     .start());
         }
 
-        @AfterClass
+        @AfterAll
         public static void stopNginx()
         {
             nginx.ifPresent(nginx_ -> {
@@ -413,7 +407,7 @@ public class ArtifactResourceTest
         @Override
         protected RestApiBuilder getRestApiBuilder()
         {
-            return FALLOUT_SERVICE_RESET_RULE.userApi().connectTo(getNginxUri());
+            return FALLOUT_SERVICE_RESET.userApi().connectTo(getNginxUri());
         }
 
         @Test
@@ -460,23 +454,23 @@ public class ArtifactResourceTest
 
     public static class UsingFalloutService extends Tests
     {
-        @ClassRule
-        public static final FalloutServiceRule FALLOUT_SERVICE_RULE = new FalloutServiceRule();
+        @RegisterExtension
+        public static final FalloutAppExtension FALLOUT_SERVICE = new FalloutAppExtension();
 
-        @Rule
-        public final FalloutServiceRule.FalloutServiceResetRule FALLOUT_SERVICE_RESET_RULE =
-            FALLOUT_SERVICE_RULE.resetRule();
+        @RegisterExtension
+        public final FalloutAppExtension.FalloutServiceResetExtension FALLOUT_SERVICE_RESET =
+            FALLOUT_SERVICE.resetExtension();
 
-        @BeforeClass
+        @BeforeAll
         public static void setRootArtifactPath()
         {
-            Tests.rootArtifactPath = FALLOUT_SERVICE_RULE.getArtifactPath();
+            Tests.rootArtifactPath = FALLOUT_SERVICE.getArtifactPath();
         }
 
         @Override
         protected RestApiBuilder getRestApiBuilder()
         {
-            return FALLOUT_SERVICE_RESET_RULE.userApi();
+            return FALLOUT_SERVICE_RESET.userApi();
         }
     }
 }
